Subir y mostrar imagenes y archivos en general

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
 </head>
 
 <body>
+
+
+    <!-- <img src="http://localhost:3000/imagen/usuario/5d7078178d283e2d0c7b3383-364.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJVU0VSX1JPTEUiLCJlc3RhZG8iOnRydWUsImdvb2dsZSI6ZmFsc2UsIl9pZCI6IjVkNzk0OWU3YThiZGRlMDAxNzkzYWM0MyIsIm5vbWJyZSI6ImZlcm5hbmRvIiwiZW1haWwiOiJmZXIxN0BnbWFpbC5jb20iLCJfX3YiOjB9LCJpYXQiOjE1NjkyMTE2OTUsImV4cCI6MTU3MTgwMzY5NX0.3P-85g6Tn6RqblKIvnK9Xuu6RB5BdtnfFUlzzVGSag0" alt=""> -->
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
     <a href="#" onclick="signOut();">Sign out</a>
